Update favicon to use anikefavicon-white.svg

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,9 +22,8 @@ const canonicalURL = new URL(Astro.url.pathname, siteURL);
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/anike logos/anikefavicon-white.svg" />
-    <link rel="icon" type="image/png" href="/anike logos/anikefavicon-white.png" />
-    <link rel="shortcut icon" href="/anike logos/anikefavicon-white.png" />
+    <link rel="icon" type="image/svg+xml" href="/anikefavicon-white.svg" />
+    <link rel="shortcut icon" href="/anikefavicon-white.svg" />
     <meta name="generator" content={Astro.generator} />
     
     <!-- SEO Meta Tags -->
